--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+:root{
+  --black: #111517;
+  --white:  white;
+  --background: #fafafa;
+}
+
+body{
+  color: var(--black);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
